# collaborative_vslam

./: CMakeLists.txt  README.md  package.xml
config/rviz/: co-vslam.rviz  creat_mask_image.rviz  leader_orb_slam.rviz  single_orb_slam_follower.rviz  single_orb_slam_leader.rviz  test_for_bag_without_co-vslam.rviz  test_for_bag_without_co-vslam_follower.rviz  test_for_bag_without_co-vslam_leader.rviz
include/: collaborative_vslam.h  roomba_mask_creator.h
include/collaborative_vslam/: collaborative_vslam.h  point.h  roomba_mask_creator.h  scale_ratio_initializer.h
launch/: all.launch  collab_bag_test_server.launch  collaborative_vslam.launch  creat_roomba_mask_image.launch  get_relative_angle.launch  get_relative_position.launch  init_ratio_nuc1.launch  init_ratio_nuc3.launch  initialize_map_scale_ratio.launch  realtime.launch  record_bag_for_collab_bag_test.launch  record_bag_realtime.launch  single_vslam_mono.launch  start.launch  unzipping.launch  unzipping_multi.launch  unzipping_realtime.launch  yolo.launch
launch/test/: record_bag_without_co-vslam.launch  test_creat_roomba_mask_image.launch  test_for_bag_without_co-vslam.launch  test_initialize_map_scale_ratio.launch  test_without_co-vslam.launch
src/: collaborative_vslam.cpp  collaborative_vslam_node.cpp  point.cpp  roomba_mask_creator.cpp  roomba_mask_creator.h  roomba_mask_creator_node.cpp  scale_ratio_initializer.cpp  scale_ratio_initializer_node.cpp
