<?xml version="1.0"?>
<package format="2">
  <name>collaborative_vslam</name>
  <version>0.0.0</version>
  <description>The collaborative_vslam package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>color_detector_msgs</build_depend>
  <build_depend>object_detector_msgs</build_depend>

  <export>
  </export>
</package>
